@@ -52,8 +52,8 @@
 *}
         <div class="tool_user_info">
                 {if $userIsValid}
-                    <div>{"Logged in as"|_}: {$userName}</div>
-                    <a class="administration" href="{$base_ssl_path}admin/generic_object_admin.php?object_id={$userId}&object_class=User&action=edit"><img class="administration" src="{$common_images_url}profile.gif">&nbsp;{"My profile"|_}</a>
+                    <div>{"Logged in as"|_}: {$userListUI}</div>
+                    <a class="administration" href="{$base_ssl_path}admin/generic_object_admin.php?object_id={$userId}&object_class=User&action=edit"><img class="administration" src="{$common_images_url}profile.gif">&nbsp;{"Preferences"|_}</a>
                     <a class="administration" href="{$base_ssl_path}login/?logout=true{$logoutParameters}"><img class="administration" src="{$common_images_url}logout.gif">&nbsp;{"Logout"|_}</a>
                 {else}
 					{if !$shrinkLeftArea}
